--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,5 @@
+<!--/_layouts/default.html-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% if page.title %}{{ page.title }} | {% endif %}LumoLetters</title>
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; object-src 'none'; connect-src 'self' https://*.auth0.com; frame-src 'self' https://*.auth0.com;">
+<script type="importmap">
+{
+  "imports": {
+    "@auth0/auth0-spa-js": "/node_modules/@auth0/auth0-spa-js/dist/auth0-spa-js.production.js",
+    "@stripe/stripe-js": "https://esm.sh/@stripe/stripe-js@4"
+  }
+}
+</script>
 </head>
 <body>
   {% include header.html %}
@@ -22,3 +31,5 @@
   <div id="error-container" class="error-message" style="display: none;"></div>
 </body>
 </html>
+
+
