--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,6 +14,10 @@
 // Component-specific styles
 @use 'components' as components; 
 
-
+// Page-specific styles
 @use 'onboarding' as onboarding;
 @use 'dashboard' as dashboard;
+@use 'homepage' as homepage;
+@use 'pages' as pages;
+
+
